@@ -93,28 +93,17 @@ gnome_canvas_group_ext_bounds (GnomeCanvasItem *item, double *x1, double *y1, do
 	GList *list;
 	double tx1, ty1, tx2, ty2;
 	double minx, miny, maxx, maxy;
-	int set;
 
 	group = GNOME_CANVAS_GROUP (item);
 
-	/* Get the bounds of the first visible item */
+	/* Get the bounds of the first item, invisible items are acceptable in gchempaint */
 
-	child = NULL; /* Unnecessary but eliminates a warning. */
+	list = group->item_list;
+	child = (list)? list->data: NULL;
 
-	set = FALSE;
-
-	for (list = group->item_list; list; list = list->next) {
-		child = list->data;
-
-		if (child->object.flags & GNOME_CANVAS_ITEM_VISIBLE) {
-			set = TRUE;
-			gnome_canvas_item_get_bounds (child, &minx, &miny, &maxx, &maxy);
-			break;
-		}
-	}
-
-
-	if (!set) {
+	if (child)
+		gnome_canvas_item_get_bounds (child, &minx, &miny, &maxx, &maxy);
+	else {
 		*x1 = *y1 = G_MAXDOUBLE;
 		*x2 = *y2 = -G_MAXDOUBLE;
 		return;
